--- a/src/main/resources/templates/thymeleaf/fo/deal/bidding.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/bidding.html
@@ -802,7 +802,11 @@ function btn_purchaseOrBid_onclick(){
 			return;
 		}
 		if($("#btn_purchaseOrBid").text() == "구매하기"){
-			location.href="/myDealDetailBuy?dealSq="+result.deal.dealSq+"&&mbrSq="+sMbrSqVal;
+			if(!isMobile){
+				location.href="/myDealDetailBuy?dealSq="+result.deal.dealSq+"&&mbrSq="+sMbrSqVal;
+			}else{
+				location.href="/myDealDetailBuy_mo?dealSq="+result.deal.dealSq+"&&mbrSq="+sMbrSqVal;
+			}
 		}else{
 			if($("#sbx_bidPrc").val() != "null"){
 				$('body').css("overflow", "hidden");
