--- a/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_buy_mo.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_buy_mo.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
-<script src="https://api-std.mainpay.co.kr/js/mainpay.pc-1.1.js"></script>
+<script src="https://api-std.mainpay.co.kr/js/mainpay.mobile-1.0.js"></script>
 <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
 <head>
     <style>
@@ -261,7 +261,7 @@
 												</tr>
 												<tr>
 													<th>입금할 금액</th>
-													<td th:text="${result.vacctInfo.paymntAmt}">000-000-0000</td>
+													<td th:text="${result.vacctInfo.paymntWorkAmt}">000-000-0000</td>
 												</tr>
 												<tr>
 													<th>입금만료 일시</th>
@@ -513,11 +513,8 @@ jQuery(document).ready(function() {
 		$("#fee").text(formatComma(fee) + ' KRW'); //작품 수수료 영역에 입력한다
 		amount = parseInt(result.dealInfo.dealFinalPrc.replaceAll(/,/g, '')); //작품가를 정수형으로 가져온다
 		getCouponList("DD"); //거래 수수료 할인 쿠폰 목록 가져오기
-		if(result.vacctInfo != null){
+		if(result.dealInfo.vacctInfo != null){
 			$("#VACCT").css("display", "");
-			$("#1PW").css("display", "none"); //1차 결제 div
-			$("#paymethod").css("display", "none"); //결제 수단 div
-			$("#btn_payment").css("display", "none") //결제 버튼
 		}
 	}
 	if(result.dealInfo.buyPaymntSttsCd == "1PW" && result.dealInfo.dealSttsCd == "TC"){ //1차 결제 미완료면
@@ -538,11 +535,8 @@ jQuery(document).ready(function() {
 		$("#paymethod").css("display", "");
 		$("#btn_payment").css("display", "");
 		getCouponList("TD"); //운송 수수료 할인 쿠폰 목록 가져오기
-		if(result.vacctInfo != null){
+		if(result.dealInfo.vacctInfo != null){
 			$("#VACCT").css("display", "");
-			$("#2PW").css("display", "none"); //2차 결제 div
-			$("#paymethod").css("display", "none");
-			$("#btn_payment").css("display", "none");
 		}
 	}
 	if(result.dealInfo.buyPaymntSttsCd == "2PC" && result.dealInfo.dealSttsCd == "TC"){ //2차 결제 완료면
@@ -635,11 +629,11 @@ function btn_paymethod_onclick(obj){
 	result.dealInfo.paymethod = obj.attributes.value.value;
 	if(result.dealInfo.buyPaymntSttsCd != "2PW"){
 		if(result.dealInfo.paymethod == "CARD"){
-			fee = Math.round(parseInt(result.dealInfo.dealFinalPrc.replaceAll(/,/g, '')) * 0.0075); //작품가의 7.5프로인 수수료를 구한다
+			fee = Math.round(parseInt(result.dealInfo.dealFinalPrc.replaceAll(/,/g, '')) * 0.075); //작품가의 7.5프로인 수수료를 구한다
 			$("#fee").text(formatComma(fee) + ' KRW'); //작품 수수료 영역에 입력한다
 		}
 		if(result.dealInfo.paymethod == "VACCT"){
-			fee = Math.round(parseInt(result.dealInfo.dealFinalPrc.replaceAll(/,/g, '')) * 0.006); //작품가의 6프로인 수수료를 구한다
+			fee = Math.round(parseInt(result.dealInfo.dealFinalPrc.replaceAll(/,/g, '')) * 0.06); //작품가의 6프로인 수수료를 구한다
 			$("#fee").text(formatComma(fee) + ' KRW'); //작품 수수료 영역에 입력한다
 		}
 		if(result.dealInfo.paymethod == "ACCT"){
@@ -692,7 +686,7 @@ function btn_paymethod_onclick(obj){
 				console.log(response);
 				if (response.resultCode == '200') {
 					/* 결제창 호출 */
-					Mainpay.open(response.data.nextPcUrl);
+					Mainpay.open(response.data.nextMobileUrl);
 					return false;
 				}
 			},
@@ -719,7 +713,7 @@ function btn_paymethod_onclick(obj){
 				console.log(response);
 				if (response.resultCode == '200') {
 					/* 결제창 호출 */
-					Mainpay.open(response.data.nextPcUrl);
+					Mainpay.open(response.data.nextMobileUrl);
 					return false;
 				}
 			},
@@ -764,7 +758,7 @@ window.call = function (data) {
 	        }
 		}); 
 	}
-	location.reload();
+	//location.reload();
 };
 
 //운송 구분 선택시
