--- a/src/main/resources/templates/thymeleaf/fo/about/terms_2.html
+++ b/src/main/resources/templates/thymeleaf/fo/about/terms_2.html
@@ -25,7 +25,7 @@
 						
 						<div class="tab-pane fade in active" id="tabmenu_02">
 							<h3>개인정보 처리방침</h3><br/>
-
+								
 							<딜링아트>('www.dealing-art.com' 이하 '딜링아트 닷컴')은(는) 「개인정보 보호법」 제30조에 따라 정보주체의 개인정보를 보호하고 이와 관련한 고충을 신속하고 원활하게 처리할 수 있도록 하기 위하여 다음과 같이 개인정보 처리방침을 수립·공개합니다.<br/>
 							
 							○ 이 개인정보처리방침은 2022년 [*]월 [*]일 부터 적용됩니다.<br/><br/>
@@ -33,60 +33,119 @@
 							<p>제1조 개인정보의 처리 목적</p>
 							딜링아트 닷컴은 다음의 목적을 위하여 개인정보를 처리합니다. 처리하고 있는 개인정보는 다음의 목적 이외의 용도로는 이용되지 않으며 이용 목적이 변경되는 경우에는 「개인정보 보호법」 제18조에 따라 별도의 동의를 받는 등 필요한 조치를 이행할 예정입니다.<br/><br/>
 							
-							홈페이지 회원가입 및 관리<br/>
+							1. 홈페이지 회원가입 및 관리<br/>
 							회원 가입의사 확인, 회원제 서비스 제공에 따른 본인 식별·인증, 회원자격 유지·관리, 서비스 부정이용 방지, 만14세 미만 아동의 개인정보 처리 시 법정대리인의 동의여부 확인, 각종 고지·통지, 고충처리 목적으로 개인정보를 처리합니다.<br/><br/>
 							
-							서비스 제공<br/>
+							2. 서비스 제공<br/>
 							작품 배송, 서비스 제공, 계약서·청구서 발송, 콘텐츠 제공, 맞춤서비스 제공, 본인인증, 연령인증, 대금결제·정산, 거래확인서 작성, 응찰신청 적격확인, 현금영수증, 세금계산서 발급, 영세율 적용대상 등의 확인을 목적으로 개인정보를 처리합니다.<br/><br/>
 							
-							마케팅 및 광고에의 활용<br/>
+							3. 마케팅 및 광고에의 활용<br/>
 							신규 서비스 개발 및 맞춤 서비스 제공, 이벤트 및 광고성 정보 제공 및 참여기회 제공, 인구통계학적 특성에 따른 서비스 제공 및 광고 게재, 서비스의 유효성 확인, 접속빈도 파악 또는 회원의 서비스 이용에 대한 통계 등을 목적으로 개인정보를 처리합니다.<br/><br/>
 							
-							고충처리 <br/>
+							4. 고충처리 <br/>
 							민원인의 신원 확인, 민원사항 확인, 사실조사를 위한 연락∙통지, 처리결과 통보 등의 목적으로 개인정보를 처리합니다.<br/><br/>
 							
 							<p>제2조 개인정보의 처리 및 보유 기간</p>
 							
-							딜링아트 닷컴은 법령에 따른 개인정보 보유·이용기간 또는 정보주체로부터 개인정보를 수집 시에 동의 받은 개인정보 보유·이용기간 내에서 개인정보를 처리·보유합니다. 법령에 따라 개인정보를 파기하지 않고 일정기간 보존하는 경우에는 해당 개인정보를 별도의 데이터베이스(DB)에 옮기거나 보관장소를 달리하여 보존합니다.<br/>
-							각각의 개인정보 처리 및 보유 기간은 다음 각 호와 같습니다.<br/>
+							1 딜링아트 닷컴은 법령에 따른 개인정보 보유·이용기간 또는 정보주체로부터 개인정보를 수집 시에 동의 받은 개인정보 보유·이용기간 내에서 개인정보를 처리·보유합니다. 법령에 따라 개인정보를 파기하지 않고 일정기간 보존하는 경우에는 해당 개인정보를 별도의 데이터베이스(DB)에 옮기거나 보관장소를 달리하여 보존합니다.<br/><br/>
+							2 각각의 개인정보 처리 및 보유 기간은 다음 각 호와 같습니다.<br/><br/>
 							
-							서비스 제공을 위해 수집한 회원가입 정보: 회원 탈퇴시까지<br/>
-							단, 정당한 사유가 있는 경우 회원 탈퇴 후 30일까지 개인정보를 보유할 수 있습니다.  <br/>
-							관계 법령 위반에 따른 수사∙조사 등이 진행중인 경우: 해당 수사∙조사 종료시까지<br/>
-							서비스 이용에 따른 채권·채무관계가 잔존하는 경우: 채권∙채무관계 정산시까지<br/>
-							관련 법령에 의한 개인정보 보유 (아래는 예시에 해당하며, 기타 개별 법령 또는 규칙 등이 별도의 보관기간을 요구하는 경우 그 기간까지 보관합니다)<br/>
-							통신비밀보호법<br/>
-							서비스 이용기록, 접속로그, 접속IP정보 : 3개월<br/>
-							전자상거래 등에서의 소비자보호에 관한 법률<br/>
-							표시∙광고에 관한 기록 : 6개월<br/>
-							계약 또는 청약철회 등에 관한 기록 : 5년<br/>
-							대금결제 및 서비스 등의 공급에 관한 기록 : 5년<br/>
-							소비자의 불만 또는 분쟁처리에 관한 기록 : 3년<br/>
-							국세기본법 <br/>
-							국세 부과 제척기간 계산을 위해 필요한 정보 : 10년<br/>
-							국세징수권 등 소멸시효 계산을 위해 필요한 정보 : 5년<br/>
-							원천징수사무처리를 위해 필요한 정보 : 5년<br/>
-							전자금융거래법<br/>
-							전자금융거래에 관한 기록 및 상대방 정보 : 5년<br/>
-							부가가치세법<br/>
-							세금계산서, 영수증 등 거래내역 관련 정보 : 5년<br/>
+							&emsp;1. 서비스 제공을 위해 수집한 회원가입 정보: 회원 탈퇴시까지<br/>
+							&emsp; 단, 정당한 사유가 있는 경우 회원 탈퇴 후 30일까지 개인정보를 보유할 수 있습니다.<br/><br/>
+							
+							&emsp;2. 관계 법령 위반에 따른 수사∙조사 등이 진행중인 경우: 해당 수사∙조사 종료시까지<br/><br/>
+							
+							&emsp;3. 서비스 이용에 따른 채권·채무관계가 잔존하는 경우: 채권∙채무관계 정산시까지<br/><br/>
+							
+							&emsp;4. 관련 법령에 의한 개인정보 보유 (아래는 예시에 해당하며, 기타 개별 법령 또는 규칙 등이 별도의 보관기간을 요구하는 경우 그 기간까지 보관합니다)<br/><br/>
+							&emsp;&emsp;1. 통신비밀보호법<br/>
+							&emsp;&emsp;&emsp;● 서비스 이용기록, 접속로그, 접속IP정보 : 3개월<br/><br/>
+							
+							&emsp;&emsp;2. 전자상거래 등에서의 소비자보호에 관한 법률<br/>
+							&emsp;&emsp;&emsp;● 표시∙광고에 관한 기록 : 6개월<br/>
+							&emsp;&emsp;&emsp;● 계약 또는 청약철회 등에 관한 기록 : 5년<br/>
+							&emsp;&emsp;&emsp;● 대금결제 및 서비스 등의 공급에 관한 기록 : 5년<br/>
+							&emsp;&emsp;&emsp;● 소비자의 불만 또는 분쟁처리에 관한 기록 : 3년<br/><br/>
+							
+							&emsp;&emsp;3. 국세기본법 <br/>
+							&emsp;&emsp;&emsp;● 국세 부과 제척기간 계산을 위해 필요한 정보 : 10년<br/>
+							&emsp;&emsp;&emsp;● 국세징수권 등 소멸시효 계산을 위해 필요한 정보 : 5년<br/>
+							&emsp;&emsp;&emsp;● 원천징수사무처리를 위해 필요한 정보 : 5년<br/><br/>
+							
+							&emsp;&emsp;4. 전자금융거래법<br/>
+							&emsp;&emsp;&emsp;● 전자금융거래에 관한 기록 및 상대방 정보 : 5년<br/><br/>
+							
+							&emsp;&emsp;5. 부가가치세법<br/>
+							&emsp;&emsp;&emsp;● 세금계산서, 영수증 등 거래내역 관련 정보 : 5년<br/><br/>
 							 
 							<p>제3조 개인정보의 제3자 제공</p>
 							
-							딜링아트 닷컴은 개인정보를 제1조(개인정보의 처리 목적)에서 명시한 범위 내에서만 처리하며, 정보주체의 동의, 법률의 특별한 규정 등 「개인정보 보호법」 제17조에 해당하는 경우에만 개인정보를 제3자에게 제공합니다.<br/>
-							현재 딜링아트 닷컴은 개인정보를 제3자에게 제공하고 있지 않습니다. 다만, 이후 개인정보를 제3자에게 제공하는 경우에도 다음 각 호의 정보를 제공하고, 정보주체의 별도 동의가 있는 때에 한하여 해당 제3자에게 개인정보를 제공합니다. <br/>
-							제공하는 개인정보 <br/>
-							개인정보를 제공받는 자<br/>
-							제공받는 자의 개인정보 이용목적<br/>
-							제공받는 자의 보유∙이용기간 <br/><br/>
+							1 딜링아트 닷컴은 개인정보를 제1조(개인정보의 처리 목적)에서 명시한 범위 내에서만 처리하며, 정보주체의 동의, 법률의 특별한 규정 등 「개인정보 보호법」 제17조에 해당하는 경우에만 개인정보를 제3자에게 제공합니다.<br/><br/>
 							
-							「개인정보 보호법」 제18조에 의거하거나, 수사 목적으로 법령에 정해진 절차와 방법에 따라 수사기관의 요구가 있는 경우에도 개인정보가 제공될 수 있습니다. <br/>
-							개인정보의 제3자 제공에 대해 동의하지 않을 수 있고 언제든지 제3자 제공 동의를 철회할 수 있습니다. 다만, 회원가입을 제외한 제3자 제공에 기반한 관련된 일부 서비스의 이용이 제한될 수 있음을 알려드립니다.<br/>
+							2 현재 딜링아트 닷컴은 개인정보를 제3자에게 제공하고 있지 않습니다. 다만, 이후 개인정보를 제3자에게 제공하는 경우에도 다음 각 호의 정보를 제공하고, 정보주체의 별도 동의가 있는 때에 한하여 해당 제3자에게 개인정보를 제공합니다. <br/>
+							&emsp;1. 제공하는 개인정보 <br/>
+							&emsp;2. 개인정보를 제공받는 자<br/>
+							&emsp;3. 제공받는 자의 개인정보 이용목적<br/>
+							&emsp;4. 제공받는 자의 보유∙이용기간 <br/><br/>
+							
+							3 「개인정보 보호법」 제18조에 의거하거나, 수사 목적으로 법령에 정해진 절차와 방법에 따라 수사기관의 요구가 있는 경우에도 개인정보가 제공될 수 있습니다. <br/><br/>
+							4 개인정보의 제3자 제공에 대해 동의하지 않을 수 있고 언제든지 제3자 제공 동의를 철회할 수 있습니다. 다만, 회원가입을 제외한 제3자 제공에 기반한 관련된 일부 서비스의 이용이 제한될 수 있음을 알려드립니다.<br/><br/>
 							
 							<p>제4조 개인정보처리 위탁</p> 
 							
-							딜링아트 닷컴은 원활한 개인정보 업무처리를 위하여 다음과 같이 개인정보 처리업무를 위탁하고 있습니다. <br/>
-							구분	수탁자	위탁 업무<br/>
+							1 딜링아트 닷컴은 원활한 개인정보 업무처리를 위하여 다음과 같이 개인정보 처리업무를 위탁하고 있습니다.<br/><br/>
+							
+							<table class="tstyle4">
+								<tr>
+									<td style="text-align: center;">구분</td>
+									<td style="text-align: center;">수탁자</td>
+									<td style="text-align: center;">위탁업무</td>
+								</tr>
+								<tr>
+									<td style="text-align: center; font-weight: 400;">본인확인</td>
+									<td style="text-align: center; font-weight: 400;">나이스평가정보주식회사</td>
+									<td style="text-align: center; font-weight: 400;">본인인증</td>
+								</tr>
+								<tr>
+									<td style="text-align: center; font-weight: 400;">계약서 관리</td>
+									<td style="text-align: center; font-weight: 400;">㈜모두싸인</td>
+									<td style="text-align: center; font-weight: 400;">전자적 방법의 계약 체결</td>
+								</tr>
+								<tr>
+									<td style="text-align: center; font-weight: 400;">고객상담</td>
+									<td style="text-align: center; font-weight: 400;">㈜케이티</td>
+									<td style="text-align: center; font-weight: 400;">고객 및 주문 정보 이용관리 등 콜센터 업무의 일체</td>
+								</tr>
+								<tr>
+									<td style="text-align: center; font-weight: 400;">운송서비스</td>
+									<td style="text-align: center; font-weight: 400;">㈜티엔엘다산아트</td>
+									<td style="text-align: center; font-weight: 400;">운송 업무 일체</td>
+								</tr>
+								<tr>
+									<td style="text-align: center; font-weight: 400;">결제 및 요금정산 처리</td>
+									<td style="text-align: center; font-weight: 400;">㈜섹타나인</td>
+									<td style="text-align: center; font-weight: 400;">신용카드, 휴대폰, 계좌이체, 무통장 입금(가상계좌) 등을 통한 결제처리</td>
+								</tr>
+								<tr>
+									<td style="text-align: center; font-weight: 400;">알림발송</td>
+									<td style="text-align: center; font-weight: 400;">네이버클라우드 주식회사, ㈜카카오</td>
+									<td style="text-align: center; font-weight: 400;">카카오알림톡, SMS 발송</td>
+								</tr>
+								<tr>
+									<td style="text-align: center; font-weight: 400;">데이터 관리</td>
+									<td style="text-align: center; font-weight: 400;">Amazon Web Services Inc.</td>
+									<td style="text-align: center; font-weight: 400;">클라우드 인프라 내 개인정보 처리</td>
+								</tr>
+								<tr>
+									<td style="text-align: center; font-weight: 400;">개발 및 운영</td>
+									<td style="text-align: center; font-weight: 400;">주식회사 이에스티소프트</td>
+									<td style="text-align: center; font-weight: 400;">서비스 개발 및 운영, 유지보수</td>
+								</tr>
+							</table>
+							2 딜링아트 닷컴은 위탁계약 체결시 「개인정보 보호법」 제26조에 따라 위탁업무 수행목적 외 개인정보 처리금지, 기술적∙관리적 보호조치, 재위탁 제한, 수탁자에 대한 관리∙감독, 손해배상 등 책임에 관한 사항을 계약서 등 문서에 명시하고, 수탁자가 개인정보를 안전하게 처리하는지를 감독하고 있습니다.<br/><br/>
+							
+							3 필요한 경우 위탁업무의 내용이나 수탁자가 추가, 제거 또는 변경될 수 있으며 이 경우에는 지체 없이 이 개인정보 처리방침을 통하여 공개하도록 하겠습니다.<br/><br/>
+							<!-- 구분	수탁자	위탁 업무<br/>
 							본인확인	나이스평가정보주식회사	본인인증<br/>
 							계약서 관리	㈜모두싸인	전자적 방법의 계약 체결<br/>
 							고객상담	㈜케이티	고객 및 주문 정보 이용관리 등 콜센터 업무의 일체<br/>
@@ -102,43 +161,44 @@
 							
 							
 							딜링아트 닷컴은 위탁계약 체결시 「개인정보 보호법」 제26조에 따라 위탁업무 수행목적 외 개인정보 처리금지, 기술적∙관리적 보호조치, 재위탁 제한, 수탁자에 대한 관리∙감독, 손해배상 등 책임에 관한 사항을 계약서 등 문서에 명시하고, 수탁자가 개인정보를 안전하게 처리하는지를 감독하고 있습니다.<br/>
-							필요한 경우 위탁업무의 내용이나 수탁자가 추가, 제거 또는 변경될 수 있으며 이 경우에는 지체 없이 이 개인정보 처리방침을 통하여 공개하도록 하겠습니다.<br/>
+							필요한 경우 위탁업무의 내용이나 수탁자가 추가, 제거 또는 변경될 수 있으며 이 경우에는 지체 없이 이 개인정보 처리방침을 통하여 공개하도록 하겠습니다.<br/> -->
 							
 							<p>제5조 정보주체와 법정대리인의 권리·의무 및 그 행사방법</p>
 							
-							정보주체는 딜링아트 닷컴에 대해 언제든지 다음 각 호의 개인정보 관련 권리를 행사할 수 있습니다. <br/>
-							개인정보의 열람, 정정 및 삭제<br/>
-							개인정보 처리정지 요구 <br/>
-							회원 탈퇴<br/>
-							동의 철회 <br/>
-							제1항에 따른 권리 행사는 딜링아트 닷컴에 대해 「개인정보 보호법」 시행령 제41조제1항에 따라 서면, 전자우편, 모사전송(FAX) 등을 통하여 하실 수 있으며 딜링아트 닷컴은 이에 대해 지체 없이 조치하겠습니다.<br/>
-							제1항에 따른 권리 행사는 정보주체의 법정대리인이나 위임을 받은 자 등 대리인을 통하여 하실 수 있습니다. 이 경우 개인정보 처리 방법에 관한 고시(제2020-7호) 별지 제11호 서식에 따른 위임장을 제출하셔야 합니다.<br/>
-							개인정보 열람 및 처리정지 요구는 「개인정보 보호법」 제35조 제4항, 제37조 제2항에 의하여 정보주체의 권리가 제한될 수 있습니다.<br/>
-							개인정보의 정정 및 삭제 요구는 다른 법령에서 그 개인정보가 수집 대상으로 명시되어 있는 경우에는 그 삭제를 요구할 수 없습니다.<br/>
-							딜링아트 닷컴은 정보주체 권리에 따른 열람의 요구, 정정·삭제의 요구, 처리정지의 요구 시 열람 등 요구를 한 자가 본인이거나 정당한 대리인인지를 확인합니다.<br/>
-							정보주체는 개인정보 보호법 등 관계법령을 위반하여 회사가 처리하고 있는 정보주체 본인이나 타인의 개인정보 및 사생활을 침해하여서는 아니됩니다.<br/>
+							1 정보주체는 딜링아트 닷컴에 대해 언제든지 다음 각 호의 개인정보 관련 권리를 행사할 수 있습니다. <br/>
+							&emsp;1. 개인정보의 열람, 정정 및 삭제<br/>
+							&emsp;2. 개인정보 처리정지 요구 <br/>
+							&emsp;3. 회원 탈퇴<br/>
+							&emsp;4. 동의 철회 <br/><br/>
+							
+							1 제1항에 따른 권리 행사는 딜링아트 닷컴에 대해 「개인정보 보호법」 시행령 제41조제1항에 따라 서면, 전자우편, 모사전송(FAX) 등을 통하여 하실 수 있으며 딜링아트 닷컴은 이에 대해 지체 없이 조치하겠습니다.<br/><br/>
+							2 제1항에 따른 권리 행사는 정보주체의 법정대리인이나 위임을 받은 자 등 대리인을 통하여 하실 수 있습니다. 이 경우 개인정보 처리 방법에 관한 고시(제2020-7호) 별지 제11호 서식에 따른 위임장을 제출하셔야 합니다.<br/><br/>
+							3 개인정보 열람 및 처리정지 요구는 「개인정보 보호법」 제35조 제4항, 제37조 제2항에 의하여 정보주체의 권리가 제한될 수 있습니다.<br/><br/>
+							4 개인정보의 정정 및 삭제 요구는 다른 법령에서 그 개인정보가 수집 대상으로 명시되어 있는 경우에는 그 삭제를 요구할 수 없습니다.<br/><br/>
+							5 딜링아트 닷컴은 정보주체 권리에 따른 열람의 요구, 정정·삭제의 요구, 처리정지의 요구 시 열람 등 요구를 한 자가 본인이거나 정당한 대리인인지를 확인합니다.<br/><br/>
+							6 정보주체는 개인정보 보호법 등 관계법령을 위반하여 회사가 처리하고 있는 정보주체 본인이나 타인의 개인정보 및 사생활을 침해하여서는 아니됩니다.<br/><br/>
 							
 							<p>제6조 처리하는 개인정보의 항목</p>
 							
-							 딜링아트 닷컴은 다음의 개인정보 항목을 처리하고 있습니다.<br/>
-							홈페이지 회원가입<br/><br/>
-							개인의 경우<br/>
-							필수항목: 성명, 생년월일, 이메일, 아이디, 비밀번호 <br/>
-							선택항목: 미술 관심분야, 기념일, 직업, 직장명, 직장 전화 번호, 직장 주소<br/><br/>
-							작가의 경우<br/>
-							필수항목: 성명, 생년월일, 이메일, 아이디, 비밀번호<br/>
-							선택항목: 프로필 이미지, 활동명, 활동분야, 기념일, 작품정보, 작가 본인의 정보(이력, 협회가입유무 등) <br/><br/>
+							1 딜링아트 닷컴은 다음의 개인정보 항목을 처리하고 있습니다.<br/>
+							&emsp;1. 홈페이지 회원가입<br/>
+							&emsp;&emsp;1. 개인의 경우<br/>
+							&emsp;&emsp;&emsp;● 필수항목: 성명, 생년월일, 이메일, 아이디, 비밀번호 <br/>
+							&emsp;&emsp;&emsp;● 선택항목: 미술 관심분야, 기념일, 직업, 직장명, 직장 전화 번호, 직장 주소<br/><br/>
+							&emsp;&emsp;2. 작가의 경우<br/>
+							&emsp;&emsp;&emsp;● 필수항목: 성명, 생년월일, 이메일, 아이디, 비밀번호<br/>
+							&emsp;&emsp;&emsp;● 선택항목: 프로필 이미지, 활동명, 활동분야, 기념일, 작품정보, 작가 본인의 정보(이력, 협회가입유무 등) <br/><br/>
 							
-							서비스 제공 <br/>
-							작품 대금 결제 <br/>
-							필수항목: 성명, 전화번호, 신용카드 정보(카드사명, 카드번호), 은행계좌 정보 <br/>
-							선택항목: 현금영수증 정보(주민등록번호 또는 휴대전화번호, 사업자의 경우 법인명/사업자등록번호/대표자명/본점 소재지/이메일 주소), 세금계산서 정보(주민등록번호), 영세율 적용 대상자 정보(여권 정보 또는 해외 사업자등록증 또는 해외 신분증 기재정보, 출입국증명서 기재정보), 개인통관부호<br/><br/>
-							운송 서비스 <br/>
-							필수항목: 성명, 전화번호, 배송지 주소<br/>
-							인보이스 작성<br/>
-							필수항목: 성명, 전화번호, 주소, 대리인의 이름<br/><br/>
+							2. 서비스 제공 <br/>
+							&emsp;1. 작품 대금 결제 <br/>
+							&emsp;&emsp;● 필수항목: 성명, 전화번호, 신용카드 정보(카드사명, 카드번호), 은행계좌 정보 <br/>
+							&emsp;&emsp;● 선택항목: 현금영수증 정보(주민등록번호 또는 휴대전화번호, 사업자의 경우 법인명/사업자등록번호/대표자명/본점 소재지/이메일 주소), 세금계산서 정보(주민등록번호), 영세율 적용 대상자 정보(여권 정보 또는 해외 사업자등록증 또는 해외 신분증 기재정보, 출입국증명서 기재정보), 개인통관부호<br/><br/>
+							&emsp;2. 운송 서비스 <br/>
+							&emsp;&emsp;● 필수항목: 성명, 전화번호, 배송지 주소<br/>
+							&emsp;3. 인보이스 작성<br/>
+							&emsp;&emsp;● 필수항목: 성명, 전화번호, 주소, 대리인의 이름<br/><br/>
 							
-							마케팅 및 광고에의 활용 <br/>
+							3. 마케팅 및 광고에의 활용 <br/>
 							선택항목: 이메일, 휴대전화번호, 아이디, 성별, 생년월일, 이름<br/><br/>
 							
 							이외에도 인터넷 서비스 이용과정에서 아래 개인정보 항목이 자동으로 생성되어 수집될 수 있습니다.<br/>
@@ -176,25 +236,25 @@
 							딜링아트 닷컴은 개인정보 처리에 관한 업무를 총괄해서 책임지고, 개인정보 처리와 관련한 정보주체의 불만처리 및 피해구제 등을 위하여 아래와 같이 개인정보 보호책임자를 지정하고 있습니다.<br/><br/>
 							
 							▶ 개인정보 보호책임자<br/>
-							성명:<br/>
-							직책:<br/>
-							직급:<br/>
-							연락처:<br/>
+							성명: 이영중<br/>
+							직책: 딜링아트 플랫폼 운영<br/>
+							직급: 이사<br/>
+							연락처: 070-4267-7373<br/>
 							※ 개인정보 보호 담당부서로 연결됩니다.<br/><br/>
 							
 							▶ 개인정보 보호 담당부서<br/>
-							부서명:<br/>
-							담당자:<br/>
-							연락처:<br/><br/>
+							부서명: 딜링아트 플랫폼 운영<br/>
+							담당자: 이영중<br/>
+							연락처: 070-4267-7373<br/><br/>
 							
 							정보주체께서는 딜링아트 닷컴의 서비스를 이용하시면서 발생한 모든 개인정보 보호 관련 문의, 불만처리, 피해구제 등에 관한 사항을 개인정보 보호책임자 및 담당부서로 문의하실 수 있습니다. 딜링아트 닷컴은 정보주체의 문의에 대해 지체 없이 답변 및 처리해드릴 것입니다.<br/>
 							
 							<p>제11조 개인정보 열람청구 </p>
 							정보주체는 ｢개인정보 보호법｣ 제35조에 따른 개인정보의 열람 청구를 아래의 부서에 할 수 있습니다. 딜링아트 닷컴은 정보주체의 개인정보 열람청구가 신속하게 처리되도록 노력하겠습니다. <br/><br/>
 							▶ 개인정보 열람청구 접수·처리 부서<br/>
-							부서명: <br/>
-							담당자: <br/>
-							연락처: <br/>
+							부서명: 딜링아트 플랫폼 운영<br/>
+							담당자: 이영중<br/>
+							연락처: 070-4267-7373<br/>
 							
 							<p>제12조 권익침해 구제방법</p>
 							정보주체는 개인정보침해로 인한 구제를 받기 위하여 개인정보분쟁조정위원회, 한국인터넷진흥원 개인정보침해신고센터 등에 분쟁해결이나 상담 등을 신청할 수 있습니다. 이 밖에 기타 개인정보침해의 신고, 상담에 대하여는 아래의 기관에 문의하시기 바랍니다.<br/><br/>
