--- a/src/main/resources/templates/thymeleaf/fo/deal/dealMod.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/dealMod.html
@@ -191,6 +191,18 @@
 										</td>
 									</tr>
 									<tr>
+										<th><span class="my-red">호수</span></th>
+										<td><input type="text" class="input-4" id="workLake" th:value="${result.work.workLake}"/></td>
+									</tr>
+									<tr>
+										<th><span class="my-red">소재/기법</span></th>
+										<td><input type="text" class="input-4" id="workMatrl" th:value="${result.work.workMatrl}"/></td>
+									</tr>
+									<tr>
+										<th><span class="my-red">제작년도</span></th>
+										<td><input type="text" class="input-4" id="workProdcYear" th:value="${result.work.workProdcYear}"/></td>
+									</tr>
+									<tr>
 										<th><span class="">작품 사진(좌)</span></th>
 										<td>
 											<div class="filebox bs3-primary">
@@ -547,6 +559,18 @@ function vaild(){
 		modalAlertShow("작품 소장가가 입력되지 않았습니다.");
 		return false;
 	}
+	if(result.work.workLake == null || result.work.workLake == ""){
+		modalAlertShow("호가가 입력되지 않았습니다.");
+		return false;
+	}
+	if(result.work.workMatrl == null || result.work.workMatrl == ""){
+		modalAlertShow("작품 소재/기법이 입력되지 않았습니다.");
+		return false;
+	}
+	if(result.work.workProdcYear == null || result.work.workProdcYear == ""){
+		modalAlertShow("작품 제작년도가 입력되지 않았습니다.");
+		return false;
+	}
 	
 	//이미지 용량 확인 체크 시작
 	if($("#workGrtUrl").val() != ""){	
@@ -623,15 +647,16 @@ function dealReg(){
 	}
 	result.work.keywrd = $("#keywrd").val();
 	result.work.mbrSq = sMbrSqVal.toString();
-	result.work.artstSq = artstSq;
-	result.work.artstActvtyNm = artstActvtyNm;
-	result.work.artstBirthYear = artstBirthYear;
 	result.work.workVideoUrl = $("#workVideoUrl").val();
 	result.work.workIntrdc = $("#workIntrdc").val();
 	result.work.workPrc = $("#workPrc").val().replaceAll(/,/g,'');
-	result.deal.artstSq = artstSq;
+	result.deal.artstSq = result.work.artstSq;
 	result.deal.workSq = result.work.workSq.toString();
 	result.deal.dealSttsCd = "TP";
+	result.work.workLake = $("#workLake").val();
+	result.work.workMatrl = $("#workMatrl").val();
+	result.work.workProdcYear = $("#workProdcYear").val();
+	
 	if(vaild()){
 		const formData = new FormData();
 		//보증서
