--- a/src/main/resources/templates/thymeleaf/fo/myPage/collection_mod.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/collection_mod.html
@@ -201,6 +201,10 @@
 									</td>
 								</tr>
 								<tr>
+									<th><span class="my-red">호수</span></th>
+									<td><input type="text" class="input-4" id="workLake" th:value="${result.workLake}"/></td>
+								</tr>
+								<tr>
 									<th><span class="my-red">소재/기법</span></th>
 									<td><input type="text" class="input-4" id="workMatrl" th:value="${result.workMatrl}"/></td>
 								</tr>
