--- a/src/main/resources/templates/thymeleaf/fo/myPage/collection_reg.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/collection_reg.html
@@ -197,6 +197,10 @@
 									</td>
 								</tr>
 								<tr>
+									<th><span class="my-red">호수</span></th>
+									<td><input type="text" class="input-4" id="workLake"/></td>
+								</tr>
+								<tr>
 									<th><span class="my-red">소재/기법</span></th>
 									<td><input type="text" class="input-4" id="workMatrl"/></td>
 								</tr>
