--- a/src/main/resources/static/css/ui_mo.css
+++ b/src/main/resources/static/css/ui_mo.css
@@ -2207,7 +2207,7 @@ input[type="radio"]:checked + label span {
 
 .mg_t20{margin-top:20px;}
 .mg_t30{margin-top:30px;}
-.mg_t40{margin-top:40px;}
+.mg_t40{margin-top:4rem;}
 .mg_b40{margin-bottom:40px;}
 
 
@@ -2292,7 +2292,7 @@ z-index: 9;}
 
 .mg_t20{margin-top:20px;}
 .mg_t30{margin-top: 3rem;}
-.mg_t40{margin-top:40px;}
+.mg_t40{margin-top:4rem;}
 .mg_b40{margin-bottom:40px;}
 
 
@@ -2488,12 +2488,13 @@ z-index: 9;}
 .input-box .span-in{
     position: absolute;
     left: 1.7rem;
-    font-size: 2.4rem;
+    font-size: 2.2rem;
     color: #666666;
     font-weight: 600;
     top: 0.9rem;
 }
 .input-1{
+    font-size: 2.2rem !important;
     width: 100%;
     border: #e8e8e8 1px solid;
     background-color: #f9f9f9;
@@ -2504,12 +2505,13 @@ z-index: 9;}
     vertical-align: top;
 }
 .input-2{
+	font-size: 2.2rem !important;
 	width: 100%;
 	border: #e8e8e8 1px solid;
 	background-color: #f9f9f9;
 	font-size: 2rem;
 	color: #999999;
-	padding: 0px 0 15px 12.4rem;
+	padding: 0px 0 1.5rem 13.7rem;
 	height: 6.6rem;
 	vertical-align: top;
 }
@@ -2554,15 +2556,15 @@ z-index: 9;}
     margin: 3rem 0 0 0;
 }
 .tstyle3 th{
-    font-size: 2.4rem;
+    font-size: 2.2rem;
     font-weight: 600;
     color: #999999;
-    width: 11rem;
+    width: 14rem;
     padding-bottom: 3rem;
 }
 .tstyle3 td{
     color: #333333;
-    font-size: 2.4rem;
+    font-size: 2.2rem;
     font-weight: 600;
     padding-bottom: 3rem;
 }
@@ -3445,7 +3447,7 @@ display: none;}
 .h2-con{
     margin-top: 60px;
 }
-.mg_t40{margin-top:40px;}
+.mg_t40{margin-top:4rem;}
 .mbox-1{
     display: block;
 }
@@ -5470,7 +5472,7 @@ position: relative;background-color: #fbfbfb;}
 .bg-st{background-color:#fff;width: 100%;}
 .bg-st .btn-group{margin-top: 0 !important;}
 .bg-st .btn-group button{background-color:#fff;}
-.comy-sum{text-align: right;width: 78.4rem;margin-top: 3rem;font-size: 2rem; font-weight: 600; color: #9f9f9f;vertical-align: middle;}
+.comy-sum{text-align: right;/* width: 78.4rem; */margin-top: 3rem;font-size: 2rem; font-weight: 600; color: #9f9f9f;vertical-align: middle;}
 .comy-sum span{padding-left: 2rem;font-size: 3.6rem; color: #000000; vertical-align: middle;font-weight: 600;}
 
 /* 0516 */
@@ -5579,4 +5581,4 @@ p.dib{display:inline-block !important;}
  .mg_t50{
 	margin-top:50px;
 	/* display: none; */
-}.terms-wrap ul li a{font-size:1.6rem;}
+}.terms-wrap ul li a{font-size:1.6rem;}.terms-wrap ul li a{font-size:1.6rem;}
