--- a/src/main/resources/templates/thymeleaf/header.html
+++ b/src/main/resources/templates/thymeleaf/header.html
@@ -143,7 +143,7 @@
 							<!-- <li><a href="javascript:fnModalAlert();"><img src="resources/img/ic-5.jpg" /><span>고객센터</span></a></li> -->
 							<li><a href="/alarm"><img src="resources/img/ic-5.jpg" /><span>알림 설정</span></a></li>
 							<li><a href="/coupon" class="scrap"><img src="resources/img/ic-4.jpg" /><span>쿠폰</span></a></li>
-							<li><a href="/withdrawal"><img src="resources/img/ic-1.jpg" /><span>회원 탈퇴</span></a></li>
+							<!-- <li><a href="/withdrawal"><img src="resources/img/ic-1.jpg" /><span>회원 탈퇴</span></a></li> -->
 						</ul>
 						<button type="button" class="btn-1" onclick="logout()">로그아웃</button>
 					</div>
