--- a/src/main/resources/static/css/ui_mo.css
+++ b/src/main/resources/static/css/ui_mo.css
@@ -470,7 +470,7 @@ html, body{font-size: calc(100vw / 75);}
   display: block;
   width: 100%;
   height: 100%;
-  /*object-fit: cover;*/
+  object-fit: cover;
 }
 
 .swiper-pagination-bullet {
