--- a/src/main/resources/static/css/ui_pc.css
+++ b/src/main/resources/static/css/ui_pc.css
@@ -124,7 +124,7 @@
     display: block;
     width: 100%;
     height: 100%;
-    /*object-fit: cover;*/
+    object-fit: cover;
 }
 .mab-text {
     position: absolute;
