--- a/src/main/resources/templates/thymeleaf/index.html
+++ b/src/main/resources/templates/thymeleaf/index.html
@@ -24,7 +24,7 @@
 				<div class="main-banner">						
 					<div class="swiper mySwiper">
 						<div class="swiper-wrapper">
-							<div class="swiper-slide">
+							<!-- <div class="swiper-slide">
 								<img src="resources/img/banner-1.jpg" />
 								<div class="mab-text">
 									<div class="mb-box">
@@ -34,7 +34,7 @@
 										<p class="mab-p2">35x35cm,  Lenticular & mixed media, 2021</p>
 									</div>
 								</div>
-							</div>
+							</div> -->
 							<div class="swiper-slide">
 								<img src="resources/img/banner-grandopen.jpg" />
 							</div>
